--- a/ShopNote/app/src/main/res/layout/custom_row_favorites.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_favorites.xml
@@ -3,6 +3,7 @@
     android:id="@+id/custom_row_list"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/colorTransparent"
     style="@style/MyListActivityRowLayout"
     >
 
