--- a/ShopNote/app/src/main/res/layout/custom_row_history.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_history.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_row_list"
+    style="@style/MyListActivityRowLayout"
     android:layout_width="wrap_content"
-    android:layout_height="30dp"
-    android:background="@drawable/row_border_blue">
+    android:layout_height="wrap_content"
+    android:background="@color/colorTransparent">
 
     <TextView
         android:id="@+id/tv_date_history"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
+        android:layout_centerVertical="true"
         android:visibility="gone"
+        android:textStyle="bold"
+        android:textSize="18sp"
         android:textColor="@android:color/black" />
     <TextView
         android:id="@+id/tv_itemname_history"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:textColor="@android:color/black" />
 
@@ -28,6 +29,7 @@
         android:id="@+id/iv_fav_histor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/iv_add_history"/>
 
     <ImageView
@@ -35,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="12px"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true" />
 
 </RelativeLayout>
