--- a/ShopNote/app/src/main/res/layout/custom_row_history_child.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_history_child.xml
@@ -2,16 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_row_list"
     android:layout_width="wrap_content"
-    android:layout_height="30dp"
-    android:background="@drawable/row_border_blue">
+    android:layout_height="wrap_content"
+    android:background="@color/colorTransparent"
+    style="@style/MyListActivityRowLayout">
 
     <TextView
         android:id="@+id/tv_item_name_his_ch"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:textColor="@android:color/black" />
 
@@ -19,6 +19,7 @@
         android:id="@+id/iv_fav_his_ch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/iv_add_his_ch"/>
 
     <ImageView
@@ -26,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="12px"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true" />
 
 </RelativeLayout>
