--- a/ShopNote/app/src/main/res/layout/activity_main.xml
+++ b/ShopNote/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
+    style="@style/MyListActivityDividerHeight"
     android:background="@drawable/shopnote_background"
-
     android:elevation="7dp">
 
     <RelativeLayout
