--- a/ShopNote/app/src/main/res/layout/custom_row_dictionary.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_dictionary.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:background="@color/colorTransparent"
     android:layout_centerVertical="true"
     android:id="@+id/custom_row">
     <TextView
