--- a/ShopNote/app/src/main/res/layout/custom_row_list_add_basic.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_list_add_basic.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@android:color/white"
+    android:background="@color/colorTransparent"
     style="@style/MyListActivityRowLayout"
     android:id="@+id/custom_row">
     <TextView
