--- a/ShopNote/app/src/main/res/layout/fragment_history.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_history.xml
@@ -4,12 +4,14 @@
     android:layout_height="match_parent"
     tools:context="com.ingentive.shopnote.fragments.HistoryFragment">
 
-    <ExpandableListView android:id="@+id/expandable_history_list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:transcriptMode="alwaysScroll"
-        android:cacheColorHint="#00000000"
+    <ExpandableListView
+        android:id="@+id/expandable_history_list"
         style="@style/MyListActivityDividerHeight"
-        android:listSelector="@android:color/transparent"/>
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#00000000"
+        android:groupIndicator="@null"
+        android:listSelector="@color/colorTransparent"
+        android:transcriptMode="alwaysScroll" />
 
 </RelativeLayout>
