--- a/ShopNote/app/src/main/res/layout/fragment_shop.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_shop.xml
@@ -4,19 +4,23 @@
     android:layout_height="match_parent"
     tools:context="com.ingentive.shopnote.fragments.ShopFragment">
 
-    <ExpandableListView android:id="@+id/expandable_shop_list"
+    <ExpandableListView
+        android:id="@+id/expandable_shop_list"
+        style="@style/MyListActivityDividerHeight"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        style="@style/MyListActivityDividerHeight"
-        android:transcriptMode="alwaysScroll"
         android:cacheColorHint="#00000000"
         android:groupIndicator="@null"
-        android:listSelector="@android:color/transparent"/>
+        android:listSelector="@color/colorTransparent"
+        android:transcriptMode="alwaysScroll" />
 
     <Button
-        android:layout_below="@+id/expandable_shop_list"
+        android:id="@+id/btn_finish_shopping"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="HELLO"/>
+        android:layout_below="@+id/expandable_shop_list"
+        android:layout_marginTop="10dp"
+        android:background="#C2DFFF"
+        android:text="@string/BTN_FINISH_SHOPPING" />
 
 </RelativeLayout>
