working with drag/drop

--- a/ShopNote/app/src/main/res/layout/custom_row_list.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_list.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerVertical="true"
+    android:background="@color/colorTransparent"
     style="@style/MyListActivityRowLayout">
 
     <ImageView
@@ -17,10 +18,10 @@
         android:layout_height="30dp"
         android:visibility="gone"
         android:background="#ADD8E6"
+        android:focusable="true"
         android:layout_toRightOf="@id/ivOpt"
         android:textColor="@android:color/black"
         android:layout_alignParentLeft="true" />
-
 
     <TextView
         android:id="@+id/tvQuantity"
@@ -34,6 +35,7 @@
     <TextView
         android:id="@+id/tvItem_Name"
         android:textSize="18sp"
+        android:paddingLeft="5px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
