--- a/ShopNote/app/src/main/res/layout/activity_manage_section.xml
+++ b/ShopNote/app/src/main/res/layout/activity_manage_section.xml
@@ -15,9 +15,12 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         style="@style/MyListActivityDividerHeight"
+        android:transcriptMode="alwaysScroll"
+        android:layout_above="@+id/az"
         android:layout_below="@+id/toolbar_manage_section" />
 
     <LinearLayout
+        android:id="@+id/az"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
@@ -33,7 +36,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="2"
             android:background="@android:color/white"
-            android:gravity="center_vertical" />
+            android:gravity="center_vertical"/>
 
         <Button
             android:id="@+id/btn_add_manage_section"
