--- a/ShopNote/app/src/main/res/layout/activity_manage_section.xml
+++ b/ShopNote/app/src/main/res/layout/activity_manage_section.xml
@@ -16,10 +16,11 @@
         android:layout_height="wrap_content"
         style="@style/MyListActivityDividerHeight"
         android:transcriptMode="alwaysScroll"
+        android:layout_above="@+id/az"
         android:layout_below="@+id/toolbar_manage_section" />
 
     <LinearLayout
-        android:layout_above="@+id/lv_manage_section"
+        android:id="@+id/az"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
