--- a/ShopNote/app/src/main/res/layout/custom_row_shop_child.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_shop_child.xml
@@ -12,18 +12,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:layout_marginLeft="50dp"
         android:textColor="@android:color/black" />
 
     <TextView
-        android:layout_toRightOf="@+id/tv_item_quantity_shop_child"
+        android:layout_toRightOf="@id/tv_item_quantity_shop_child"
         android:id="@+id/tv_item_name_shop_child"
+        android:paddingLeft="5px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="114px"
         android:textColor="@android:color/black" />
 
     <ImageView
