--- a/ShopNote/app/src/main/res/layout/activity_manage_section.xml
+++ b/ShopNote/app/src/main/res/layout/activity_manage_section.xml
@@ -10,12 +10,11 @@
         android:id="@+id/toolbar_manage_section"
         layout="@layout/toolbar_manage_sections" />
 
-    <ListView
+    <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
         android:id="@+id/lv_manage_section"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         style="@style/MyListActivityDividerHeight"
-        android:transcriptMode="alwaysScroll"
         android:layout_above="@+id/az"
         android:layout_below="@+id/toolbar_manage_section" />
 
@@ -29,6 +28,7 @@
         android:weightSum="3">
 
         <EditText
+            android:layout_marginLeft="5dp"
             android:id="@+id/et_add_manage_section"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
