--- a/ShopNote/app/src/main/res/layout/custom_row_list.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_list.xml
@@ -35,6 +35,7 @@
     <TextView
         android:id="@+id/tvItem_Name"
         android:textSize="18sp"
+        android:paddingLeft="5px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
