--- a/ShopNote/app/src/main/res/layout/fragment_shop.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_shop.xml
@@ -20,6 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/expandable_shop_list"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="#C2DFFF"
         android:text="@string/BTN_FINISH_SHOPPING" />
 
