--- a/ShopNote/app/src/main/res/layout/custom_row_shop_parent_merge.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_shop_parent_merge.xml
@@ -3,8 +3,7 @@
     android:id="@+id/custom_row_list"
     style="@style/MyListActivityRowLayout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/colorTransparent">
+    android:layout_height="wrap_content">
 
 
     <ImageView
