--- a/ShopNote/app/src/main/res/layout/fragment_shop_simple_listview.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_shop_simple_listview.xml
@@ -10,7 +10,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:cacheColorHint="#00000000"
+        android:layout_alignParentTop="true"
         android:groupIndicator="@null"
+        android:layout_above="@+id/btn_finish_shopping"
         android:listSelector="@color/colorTransparent" />
 
     <Button
@@ -19,7 +21,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/expandable_shop_list"
+        android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
         android:background="#C2DFFF"
         android:text="@string/BTN_FINISH_SHOPPING" />
