--- a/ShopNote/app/src/main/res/layout/toolbar.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar.xml
@@ -20,12 +20,13 @@
         android:textColor="#ffffff"
         android:gravity="center_horizontal"
         />
-
     <EditText
         android:id="@+id/edittext_toolbar_title"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:visibility="gone"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:focusable="true"
         android:focusableInTouchMode="true"
         />
