--- a/ShopNote/app/src/main/res/layout/toolbar_list_add.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar_list_add.xml
@@ -10,6 +10,7 @@
 
     <EditText
        android:id="@+id/etSearch"
+        android:inputType="textCapSentences"
        android:layout_width="fill_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
