search toolbar padding_left 5dp quantity textview margin_left6dp

--- a/ShopNote/app/src/main/res/layout/toolbar.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar.xml
@@ -25,6 +25,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:visibility="gone"
+        android:paddingLeft="5dp"
         android:textSize="18sp"
         android:textStyle="bold"
         android:focusable="true"
