--- a/ShopNote/app/src/main/res/layout/activity_history_search.xml
+++ b/ShopNote/app/src/main/res/layout/activity_history_search.xml
@@ -14,6 +14,7 @@
         layout="@layout/toolbar_history_search"
         />
     <ListView
+        style="@style/MyListActivityDividerHeight"
         android:id="@+id/lv_history_search"
         android:layout_below="@+id/toolbar_history"
         android:layout_width="fill_parent"
