--- a/ShopNote/app/src/main/res/layout/toolbar_favorites_search.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar_favorites_search.xml
@@ -15,6 +15,7 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="8dp"
+        android:paddingLeft="5dp"
         android:layout_marginRight="8dp"
         android:background="@android:color/white"
         android:completionThreshold="1"
