--- a/ShopNote/app/src/main/res/layout/toolbar_history_search.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar_history_search.xml
@@ -13,6 +13,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:paddingLeft="5dp"
         android:inputType="textCapSentences"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="8dp"
