--- a/ShopNote/app/src/main/res/layout/activity_list.xml
+++ b/ShopNote/app/src/main/res/layout/activity_list.xml
@@ -15,7 +15,7 @@
    -->
  
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawer_layoutddddddddd"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/shopnote_background">
