--- a/ShopNote/app/src/main/res/layout/activity_manage_section.xml
+++ b/ShopNote/app/src/main/res/layout/activity_manage_section.xml
@@ -37,6 +37,7 @@
             android:layout_below="@+id/lv_manage_section"
             android:layout_gravity="center_vertical"
             android:layout_weight="2"
+            android:paddingLeft="5dp"
             android:background="@android:color/white"
             android:gravity="center_vertical"/>
 
