--- a/ShopNote/app/src/main/res/layout/toolbar_history_search.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar_history_search.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:paddingLeft="5dp"
+        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
         android:inputType="textCapSentences"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="8dp"
