--- a/ShopNote/app/src/main/res/menu/menu_main.xml
+++ b/ShopNote/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
     tools:context=".MainActivity">
     <item
         android:id="@+id/action_add"
-        android:icon="@drawable/add_menu"
+        android:icon="@drawable/add_large_selected"
         android:orderInCategory="100"
         android:title="Add"
         app:showAsAction="always" />
